line multi comments, prog input

--- a/src/app/pcex-editor/pcex-editor.component.html
+++ b/src/app/pcex-editor/pcex-editor.component.html
@@ -11,15 +11,78 @@
         </textarea>
         </div>
 
+        <div class="grid gap-4 grid-cols-1 md:grid-cols-2">
+            <div class="flex flex-col gap-4">
+                <span class="text-xl font-bold">Source Code</span>
+                <ngx-monaco-editor [(ngModel)]="model.code" [options]="options" (onInit)="setupSourceEditor($event)"
+                    (ngModelChange)="onCodeUpdate()" class="flex-grow border px-1 rounded-md">
+                </ngx-monaco-editor>
+            </div>
+
+            <div class="flex flex-col gap-2 relative">
+                <div class="flex flex-col">
+                    <span class="text-xl font-bold">
+                        Line Annotation
+                    </span>
+                    <span class="text-gray-400 text-xs">
+                        Annotations are attached to line numbers (NOT line contents).
+                    </span>
+                </div>
+                <ng-container *ngIf="selectedLineNum">
+                    <div class="flex items-center">
+                        <p-checkbox name="groupname" [binary]="true" label="Is a blank line"
+                            [(ngModel)]="selectedLine.blank" [disabled]="!selectedLineNum"
+                            (onChange)="reloadLineMarkers()"></p-checkbox>
+
+                        <span class="flex-grow"></span>
+
+                        <button pButton type="button" icon="pi pi-plus" class="p-button-rounded p-button-text"
+                            (click)="addLineComment()"></button>
+                    </div>
+
+                    <div *ngFor="let comment of selectedLine.comments" class="flex flex-col gap-1 relative">
+                        <textarea pInputTextarea [(ngModel)]="comment.content" [disabled]="!selectedLineNum" rows="1"
+                            placeholder="Comment" class="p-inputtext-sm" (ngModelChange)="reloadLineMarkers()">
+                        </textarea>
+
+                        <button pButton type="button" icon="pi pi-times"
+                            class="p-button-rounded p-button-danger p-button-text absolute top-0 right-0"
+                            (click)="removeLineComment(comment)"></button>
+                    </div>
+                </ng-container>
+                <ng-container *ngIf="!selectedLineNum">
+                    <span class="text-gray-500 text-sm">
+                        ← to start annotating, place the cursor in a line.
+                    </span>
+                </ng-container>
+            </div>
+        </div>
+
+        <div class="flex flex-col gap-4">
+            <div class="flex flex-col">
+                <span class="text-xl font-bold">Program Input</span>
+                <span class="text-gray-400 text-xs">
+                    Available through System.in (Java), stdin (C, C++), ...
+                </span>
+            </div>
+            <textarea pInputTextarea [(ngModel)]="model.programInput" rows="1" placeholder="" class="p-inputtext-sm">
+            </textarea>
+        </div>
+
+
         <div class="flex items-center gap-4">
-            <span (click)="tt['distractors'] = !tt['distractors']" class="text-xl font-bold flex-grow cursor-pointer">
-                <span>Distractors ({{ model.distractors.length }})</span>
-                <i [class]="'mx-2 text-blue-500 pi pi-chevron-' + (tt['distractors'] ? 'down' : 'up')"></i>
-            </span>
+            <div class="flex flex-col flex-grow">
+                <span (click)="tt['distractors'] = !tt['distractors']" class="text-xl font-bold cursor-pointer">
+                    <span>Distractors ({{ model.distractors.length }})</span>
+                    <i [class]="'mx-2 text-blue-500 pi pi-chevron-' + (tt['distractors'] ? 'down' : 'up')"></i>
+                </span>
+                <span class="text-gray-400 text-xs">
+                    Blank line possible replacements
+                </span>
+            </div>
             <button pButton type="button" icon="pi pi-plus" class="p-button-rounded p-button-text"
                 (click)="addDistractor()"></button>
         </div>
-
         <div *ngIf="!tt['distractors']" class="flex flex-col gap-1">
             <div *ngIf="model.distractors.length < 1" class="flex gap-2 p-2 border rounded-md">
                 <span class="mx-auto">
@@ -28,9 +91,6 @@
                 </span>
             </div>
             <div *ngFor="let distractor of model.distractors; let i = index" class="flex items-start gap-2">
-                <i class="pi pi-times text-red-600 hover:bg-red-100 w-4 h-4 rounded-full text-xs cursor-pointer"
-                    style="margin-top: 0.15rem; padding-left: 0.125rem;" (click)="delDistractor(distractor)">
-                </i>
                 <span class="w-4 text-right text-sm">
                     {{ i + 1 }}.
                 </span>
@@ -42,34 +102,16 @@
                         placeholder="Description" rows="1" class="text-xs border-t"
                         style="border-bottom: none; border-left: none; border-right: none; border-radius: 0; padding: 0.125rem 0.25rem;"></textarea>
                 </div>
-            </div>
-        </div>
-
-        <div class="grid gap-4 grid-cols-1 md:grid-cols-2">
-            <div class="flex flex-col gap-4">
-                <span class="text-xl font-bold">Source Code</span>
-                <ngx-monaco-editor [(ngModel)]="model.code" [options]="options" (onInit)="setupSourceEditor($event)"
-                    class="flex-grow border px-1 rounded-md">
-                </ngx-monaco-editor>
-            </div>
-
-            <div class="flex flex-col gap-4">
-                <span class="text-xl font-bold">
-                    Line Annotation
-                </span>
-                <p-checkbox name="groupname" [binary]="true" label="Is a blank line" [(ngModel)]="line.blank"
-                    [disabled]="!selectedLine" (onChange)="reloadDecorations()"></p-checkbox>
-
-                <textarea pInputTextarea [(ngModel)]="line.comment" [disabled]="!selectedLine" rows="7"
-                    placeholder="Comment" class="p-inputtext-sm" (ngModelChange)="reloadDecorations()">
-                </textarea>
+                <button pButton type="button" icon="pi pi-times" class="p-button-rounded p-button-danger p-button-text"
+                    (click)="removeDistractor(distractor)"></button>
             </div>
         </div>
 
         <hr />
 
         <span class="text-xl font-bold">JSON Representation</span>
-        <ngx-monaco-editor [ngModel]="model | json" [options]="options_vw" class="flex-grow border px-1 rounded-md">
+        <ngx-monaco-editor [ngModel]="model | json" [options]="options_vw" class="flex-grow border px-1 rounded-md"
+            style="height: 30rem;">
         </ngx-monaco-editor>
     </div>
 </div>
