all crud functional

--- a/editor-ui/src/app/activities/activities.component.html
+++ b/editor-ui/src/app/activities/activities.component.html
@@ -1,1 +1,54 @@
-<p>activities works!</p>
+<p-table #table [value]="activities" [globalFilterFields]="['name']">
+    <ng-template pTemplate="caption">
+        <div class="flex items-center">
+            <button pButton type="button" label="New Activity" icon="pi pi-plus" class="p-button-sm"
+                (click)="create = true"></button>
+
+            <span class="p-input-icon-right ml-auto">
+                <i class="pi pi-search"></i>
+                <input pInputText type="text" (input)="filter(table, $event)" placeholder="Filter"
+                    class="p-inputtext-sm" />
+            </span>
+        </div>
+
+        <ng-container *ngIf="create">
+            <hr class="my-4" />
+
+            <app-activity (completed)="reload();" [activity]="{ items: [] }"></app-activity>
+        </ng-container>
+    </ng-template>
+    <ng-template pTemplate="header">
+        <tr>
+            <th class="text-2xl">
+                Examples and Challenges
+            </th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-_activity>
+        <tr>
+            <td>
+                <div *ngIf="activity != _activity" class="flex w-full items-center pl-4">
+                    <div class="flex flex-col flex-grow">
+                        <span class="font-bold cursor-pointer text-blue-700" (click)="activity = _activity">
+                            {{_activity.name || '[name not set]'}}
+                        </span>
+                    </div>
+                    <button pButton type="button" icon="pi pi-times"
+                        class="p-button-text p-button-rounded p-button-sm p-button-danger remove-btn"
+                        (click)="remove(activity)"></button>
+                </div>
+                <app-activity *ngIf="activity == _activity" [activity]="activity"
+                    (completed)="activity = null; reload();"></app-activity>
+            </td>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="emptymessage">
+        <tr>
+            <td>
+                <div class="text-xs text-center text-gray-400 w-full">
+                    no record matched, revise your filter keyword
+                </div>
+            </td>
+        </tr>
+    </ng-template>
+</p-table>
