--- a/editor-ui/src/app/activities/activities.component.html
+++ b/editor-ui/src/app/activities/activities.component.html
@@ -35,7 +35,7 @@
                     </div>
                     <button pButton type="button" icon="pi pi-times"
                         class="p-button-text p-button-rounded p-button-sm p-button-danger remove-btn"
-                        (click)="remove(activity)"></button>
+                        (click)="remove(_activity)"></button>
                 </div>
                 <app-activity *ngIf="activity == _activity" [activity]="activity"
                     (completed)="activity = null; reload();"></app-activity>
