--- a/editor-ui/src/app/activities/activities.component.less
+++ b/editor-ui/src/app/activities/activities.component.less
@@ -1,4 +1,10 @@
+.download-btn,
+.reload-btn,
 .remove-btn {
-    width: 1.75rem !important;
-    height: 1.75rem !important;
+    width: 2rem !important;
+    height: 2rem !important;
+}
+
+.download-btn {
+    width: auto !important;
 }
