--- a/editor-ui/src/app/app.component.html
+++ b/editor-ui/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ngx-loading-bar ref="router"></ngx-loading-bar>
-<ngx-loading-bar ref="http"></ngx-loading-bar>
+<ngx-loading-bar ref="router" [height]="'0.25rem'"></ngx-loading-bar>
+<ngx-loading-bar ref="http" [height]="'0.25rem'"></ngx-loading-bar>
 
 <router-outlet></router-outlet>
